@@ -118,6 +118,7 @@ Documentation Contributors:
 Translation Contributors:
 -------------------------
 Afrikaans (af-ZA) - Gerrit Hoekstra
+Albanian (sq-AL) - Blendi Kraja
 Arabic Unitag (ar-AA) - Arabic Unitag Translation Team - Mahmood Alhaj Kassem
 Azeri (az-AZ) - Azeri Translation team - Guluzade Farhad
 Basque (eu-ES) - Oinatz Martin
