@@ -37,6 +37,7 @@ INSTL_DATABASE_HOST_DESC="See on tavaliselt &quot;localhost&quot;"
 INSTL_DATABASE_HOST_LABEL="Hostinimi"
 INSTL_DATABASE_NAME_DESC="Mõned teenusepakkujad võimaldavad lubada ainult saidi jaoks ainult ühte kindla nimega andmebaasi. Joomla! saitide eristamiseks teine-teisest kasuta andmebaasi eelliidet."
 INSTL_DATABASE_NAME_LABEL="Andmebaasi nimi"
+INSTL_DATABASE_NO_SCHEMA="Selle andmebaasi tüübi jaoks pole andmebaasi skeemi."
 INSTL_DATABASE_OLD_PROCESS_DESC="Kõik varasemad varukoopiad varasematest Joomla! saitidest asendatakse praegu loodutega"
 INSTL_DATABASE_OLD_PROCESS_LABEL="Vana andmebaasi töötlemine"
 INSTL_DATABASE_PASSWORD_DESC="Saidi turvalisuse tagamiseks on vajalik mysql kasutajakonto parooli kasutamine"
@@ -97,6 +98,8 @@ INSTL_SITE_LOAD_SAMPLE_DESC7="Sa võid üles laadida pakkimata SQL skripti faile
 INSTL_SITE_LOAD_SAMPLE_DESC8="<strong>3. Uus paigaldus</strong>: Kui sa soovid lihtsalt uue saidi loomist, siis sisesta saidi nimi, administraatori e-posti aadress ja vali omale sobiv parool. Seejärel mine viimase paigaldamise sammu juurde klikkides nuppu <em>Edasi</em>."
 INSTL_SITE_OFFLINE_LABEL="Sait on välja lülitatud"
 INSTL_SITE_OFFLINE_TITLE_LABEL="Lülita saidipoolne osa välja kohe, kui paigaldamine on lõpetatud. Saidi saab hiljem üldistest seadetest uuesti sisse lülitada."
+INSTL_SAMPLE_BLOG_SET="Blogi inglisekeelne (GB) näidisinfo"
+INSTL_SAMPLE_BROCHURE_SET="Brošüüri inglisekeelne (GB) näidisinfo"
 INSTL_SITE_SAMPLE_LABEL="Näidisinfo variant"
 INSTL_SITE_INSTALL_SAMPLE_LABEL="Paigalda näidisinfo"
 INSTL_SITE_INSTALL_SAMPLE_DESC="Näidisinfo paigaldamine on algajate kasutajate jaoks tungivalt soovitatud. See paigaldab Joomla! paigalduspaketiga kaasasoleva näidisinfo."
