@@ -1,0 +1,228 @@
+; Joomla1 sq-AL
+; Joomla! Project
+; Copyright (C) 2005 - 2012 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+
+
+;Stepbar
+INSTL_STEPS_TITLE="Hapat"
+INSTL_STEP_1_LABEL="1 : Gjuha"
+INSTL_STEP_2_LABEL="2 : Kontrolli paraprak"
+INSTL_STEP_3_LABEL="3 : Licensa"
+INSTL_STEP_4_LABEL="4 : Databaza"
+INSTL_STEP_5_LABEL="5 : Konfigurimi FTP"
+INSTL_STEP_6_LABEL="6 : Konfigurimi"
+INSTL_STEP_7_LABEL="7 : Fund"
+
+;Language view
+INSTL_LANGUAGE_TITLE="Zgjidh gjuhën"
+INSTL_SELECT_LANGUAGE_DESC="Zgjidh gjuhën me përdorë gjatë hapave t'instalimit të Joomla!-s."
+INSTL_SELECT_LANGUAGE_TITLE="Zgjidh gjuhën"
+INSTL_WARNJAVASCRIPT="Njoftim! JavaScript duhet m'u aktivizue për instalimin e saktë të Joomla!-s"
+INSTL_WARNJSON="Instalimi PHP ka nevojë me pasë t'aktivizuem JSON që t'instalohet Joomla!"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE="Kontrolli paraprak"
+INSTL_PRECHECK_FOR_VERSION="Kontroll para-instalues për %s:"
+INSTL_PRECHECK_DESC="Nëse ndonji nga këto sende nuk mbështetet (shenjue si <strong class="_QQ_"red"_QQ_">Jo</strong>) atëherë ndërmerr veprime për me i ndreqë. Mospërputhja në këtë pikë mund të bajnë që instalimi i Joomla!-s mos me punue saktë."
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="T'dhanat e rekomandueshme:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="Këto t'dhana rekomandohen për PHP-në me qëllim që të sigurohet pajtueshmëri e plotë me  Joomla!-n.<br />Gjithsesi, Joomla! ka me punue edhe nëse t'dhanat nuk i përputhen krejt të rekomandueshmeve."
+INSTL_PRECHECK_DIRECTIVE="Direktiva"
+INSTL_PRECHECK_RECOMMENDED="E rekomandueshme"
+INSTL_PRECHECK_ACTUAL="Aktualisht"
+
+; Database view
+INSTL_DATABASE="Konfigurimi i databazës"
+INSTL_DATABASE_HOST_DESC="Kjo asht zakonisht &quot;localhost&quot;"
+INSTL_DATABASE_HOST_LABEL="Emni i hostit"
+INSTL_DATABASE_NAME_DESC="Disa hoste lejojnë veç nji lloj të caktuem emni DB për faqe. Për në këte rast prefiksin e tabelës për faqe të veçanta Joomla!."
+INSTL_DATABASE_NAME_LABEL="Emni i databazës"
+INSTL_DATABASE_NO_SCHEMA="S'ka skemë databaze për këte lloj databaze."
+INSTL_DATABASE_OLD_PROCESS_DESC="Çdo tabelë backup ekzistuese nga instalime të maparshme Joomla! ka me u zavendësue"
+INSTL_DATABASE_OLD_PROCESS_LABEL="Procesi i databazës së vjetër"
+INSTL_DATABASE_PASSWORD_DESC="Për siguri në faqe, përdorimi i nji fjalkalimi për llogarinë mysql asht i detyrueshëm"
+INSTL_DATABASE_PASSWORD_LABEL="Fjalkalimi"
+INSTL_DATABASE_PREFIX_DESC="Zgjidh nji prefiks tabele ose përdor nji <b>prodhue rastësisht</b>. Ma e mira, tre ose katër shkroja, ka vetëm gërma alfanumerike dhe DUHET me mbarue me nënvizë. <b>Sigurohu që prefiksi i zgjedhun nuk asht i përdorun nga tabelat e tjera</b>."
+INSTL_DATABASE_PREFIX_LABEL="Prefiksi i tabelës"
+INSTL_DATABASE_PREFIX_MSG="Prefiksi i tabelës duhet me ja nisë me shkrojë, tu'u ndjekë nga shkroja opsionale alfanumerike dhe nga nji nënvizë"
+INSTL_DATABASE_TYPE_DESC="Kjo asht me gjasë &quot;MySQLi&quot;"
+INSTL_DATABASE_TYPE_LABEL="Lloji i databazës"
+INSTL_DATABASE_USER_DESC="Ose diçka si "_QQ_"root"_QQ_" ose nji pseudonim dhanë nga hosti"
+INSTL_DATABASE_USER_LABEL="Pseudonimi"
+INSTL_DATABASE_TITLE="T'dhanat e lidhjes"
+INSTL_DATABASE_DESC="<p>Nji faqe Joomla! i ruen krejt të dhanat në nji databazë. Kjo pamje i jep programit t'instalimit informacionin e nevojshëm me krijue këte databazë.</p><p> Nëse po e instalon Joomla!-s në nji server larg, ka me t'u dashtë me e marrë këte informacion nga hosti.</p><p>Disa hostues kërkojnë që ta krijosh databazën para se ta instalosh Joomla!-n. Nëse të del mesazhi "_QQ_"S'mund të lidhet me databazën"_QQ_", kontrollo që pseudonimi dhe fjalkalimi janë të saktë. Nëse të del prap ky mesazh, lidhu me hostin me kqyrë se mos të duhet me krijue nji databazë përpara instalimit.</p>" 
+
+;Filesystem view
+INSTL_AUTOFIND_FTP_PATH="Gjeje vetë rrugën FTP"
+INSTL_FTP="Konfigurimi FTP"
+INSTL_FTP_DESC="<p>Në disa servera mund të të duhet me dhanë kredencialet FTP që të përmbyllet instalimi. Nëse ke vështirësi në përmbylljen e instalimit pa këto kredenciale, komuniko me hostin për me përcaktue se a asht e nevojshme kjo. </p><p>Për arsye sigurie, asht ma e mira me krijue nji llogari FTP përdoruesi me akses vetëm n'instalimin Joomla! dhe jo në krejt serverin web. Hosti mundet me të ndihmue këtu.</p><p><b>Shënim:</b> Nëse po instalon në sistemin operativ Windows, shtresa FTP asht <strong>jo</strong> e detyrueshme.</p>"
+INSTL_FTP_ENABLE_LABEL="Aktivizo shtresën FTP"
+INSTL_FTP_HOST_LABEL="Hosti FTP"
+INSTL_FTP_PASSWORD_LABEL="Fjalkalimi i FTP-së"
+INSTL_FTP_PORT_LABEL="Porta e FTP-së"
+INSTL_FTP_ROOT_LABEL="Rruga rranjë FTP"
+INSTL_FTP_SAVE_LABEL="Rueje fjalkalimin FTP"
+INSTL_FTP_TITLE="Konfigurimi FTP (<strong class="_QQ_"red"_QQ_">Opsionale - Shumica e përdoruesve mund ta anashkalojnë këte hap - Shtyp Tjetri me ikë</strong>)"
+INSTL_FTP_USER_LABEL="Pseudonimi FTP"
+INSTL_SITE_NAME_LABEL="Emni i faqes"
+INSTL_VERIFY_FTP_SETTINGS="Vërteto t'dhanat FTP"
+INSTL_FTP_SETTINGS_CORRECT="T'dhanat e sakta"
+INSTL_FTP_USER_DESC="Paralajmërim! Rekomandohet me e lanë këte bosh dhe me futë pseudonimin FTP çdo herë që transferon dokumenta."
+INSTL_FTP_PASSWORD_DESC="Paralajmërim! Rekomandohet me e lanë këte bosh dhe me futë fjalkalimin FTP çdo herë që transferon dokumenta."
+
+;Site View
+INSTL_SITE="Konfigurimi kryesor"
+INSTL_ADMIN_EMAIL_LABEL="Emaili yt"
+INSTL_ADMIN_PASSWORD_LABEL="Fjalkalimi i administratorit"
+INSTL_ADMIN_PASSWORD2_LABEL="Vërteto fjalkalimin e administratorit"
+INSTL_ADMIN_USER_LABEL="Pseudonimi i administratorit"
+INSTL_SITE_NAME_TITLE="Emni i faqes"
+INSTL_SITE_META_ADVANCED_SETTINGS="T'dhanat e përparueme - Opsionale"
+INSTL_SITE_NAME_DESC="Shkruej emnin e faqes tande Joomla!.<br />Opsionale:<br /> Mundesh me futë edhe përshkrimin meta dhe fjalkyçet meta të faqes.<br /> Mundesh gjithashtu të vendosësh që ballina e faqes të hapet menjiherë apo jo mbasi të kryhet instalimi."
+INSTL_SITE_METADESC_LABEL="Përshkrimi meta"
+INSTL_SITE_METADESC_TITLE_LABEL="Fut nji përshkrim të përgjithshëm të faqes që ka me u përdorë nga motorat e kërkimit. Zakonisht, 20 fjalë janë optimale."
+INSTL_SITE_METAKEYS_LABEL="Fjalkyçet meta"
+INSTL_SITE_METAKEYS_TITLE_LABEL="Fut fjalkyçet dhe shprehjet që e përshkruejnë ma s'miri faqen. Ndaji fjalkyçet dhe shprehjet me presje."
+INSTL_SITE_CONF_TITLE="Konfirmo emailin dhe fjalkalimin e administratorit."
+INSTL_SITE_CONF_DESC="Shkruej adresën tande t'emailit. Kjo ka me qenë adresa e superadministratorit të faqes.<br />Fut nji fjalkalim dhe mandej konfirmoje në fushat përkatëse. Mund ta ndryshosh pseudonimin normal <strong>admin</strong>. Këta kanë me qenë pseudonimi dhe fjalkalimi që ke me përdorë me hy në panelin administrativ të kontrollit në fund t'instalimit.<br /> Nëse po migron, mund ta shpërfillësh këte pjesë. T'dhanat aktuale do të migrohen automatikisht."
+INSTL_SITE_LOAD_SAMPLE_TITLE="Ngarko t'dhanat shembull"
+INSTL_SITE_LOAD_SAMPLE_DESC1="<strong>E randësishme!</strong>: Rekomandohet me forcë që përdoruesit e ri të Joomla!-s me instalue t'dhanat shembuj. M'i instalue shtyp butonin <i>para</i> për me shkue në nivelin tjetër."
+INSTL_SITE_LOAD_SAMPLE_DESC2="<strong>1. T'dhanat shembuj:</strong> Para ikjes nga instalimi, mund ta popullosh databazën me të dhana. Ka dy mënyra me e ba këte:"
+INSTL_SITE_LOAD_SAMPLE_DESC3="<strong>1a. T'dhanat shembull normale</strong>. M'i përdorë, sigurohu që janë shpalosë t'Dhanat Normale Anglisht (GB) në listë dhe shtyp butonin e instalimit të të dhanave shembull."
+INSTL_SITE_LOAD_SAMPLE_DESC4="<strong>1b. T'dhanat shembull t'veçanta</strong>. M'i përdorë, zgjidh nji grup t'dhanash shembull nga lista dhe shtyp butonin e instalimit të të dhanave shembull."
+INSTL_SITE_LOAD_SAMPLE_DESC8="<strong>2. Instalim i pastër</strong>: Nëse dëshiron me ba nji instalim të pastër, fut emnin e faqes, emailin administrativ dhe zgjidh nji fjalkalim. Mandej kalo në hapin e fundit tue shtypë <em>Tjetri</em>."
+INSTL_SITE_OFFLINE_LABEL="Faqja fikë"
+INSTL_SITE_OFFLINE_TITLE_LABEL="Fike ballinën kur të kryhet instalimi. Faqja mund të ndizet ma vonë tek konfigurimi global."
+INSTL_SITE_SAMPLE_LABEL="Grupi i t'dhanave shembull"
+INSTL_SITE_INSTALL_SAMPLE_LABEL="Instaloji t’dhanat shembull"
+INSTL_SITE_INSTALL_SAMPLE_DESC="Instalimi i këtyne rekomandohet fort për fillestarët. Kjo ka me instalue përmbajtje eksperimentale që përfshihet në paketën e instalimit Joomla!."
+INSTL_SITE_SAMPLE_LOADED="T'dhanat shembull u instaluen me sukses!"
+INSTL_SAMPLE_DATA_SET="T'dhanat shembull normale (GB)"
+INSTL_SAMPLE_BLOG_SET="T'dhanat shembull blogu anglisht (GB)"
+INSTL_SAMPLE_BROCHURE_SET="T'dhanat shembull broshura anglisht (GB)"
+
+;Complete view
+INSTL_COMPLETE="Përfundimi"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="Hollësinat e hymjes n’administrim"
+INSTL_COMPLETE_DESC1="Shtyp butonin e faqes me pa faqen ose admin me shkue tek hymja administrative."
+INSTL_COMPLETE_DESC2="Tek faqja e bashkësisë Joomla! ke me gjetë nji listë paketash gjuhe si dhe nyje për burime lidhun me gjuhën në familjen e faqeve joomla.org."
+INSTL_COMPLETE_DESC3="Shtyp butonin në të djathë me hapë faqen e bashkësisë në dritare të re."
+INSTL_COMPLETE_ERROR_FOLDER_ALREADY_REMOVED="Direktoria e instalimit asht fshi."
+INSTL_COMPLETE_ERROR_FOLDER_DELETE="Direktoria e instalimit s'mund të fshihet. T'lutem fshije vetë."
+INSTL_COMPLETE_FOLDER_REMOVED="Direktoria e instalimit u fshi"
+INSTL_COMPLETE_LANGUAGE_1="Joomla! në gjuhën tande?"
+INSTL_COMPLETE_LANGUAGE_2="Vizito faqen e bashkësisë Joomla! për shkarkime të paketave gjuhësore."
+INSTL_COMPLETE_REMOVE_FOLDER="Fshije direktorinë e instalimit"
+INSTL_COMPLETE_REMOVE_INSTALLATION="T'LUTEM KUJTOHO ME E FSHI<br />KREJT DIREKTORINË E INSTALIMIT.<br />S'ke me qenë në gjendje me e kalue këte nivel derisa të mos jetë fshi direktoria e instalimit. Kjo asht veçori sigurie e Joomla!-s."
+INSTL_COMPLETE_TITLE="Urime! Joomla! asht instalue."
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT="S'lidhet me databazën. Lidhësi ktheu numrin: %s"
+INSTL_DATABASE_COULD_NOT_REFRESH_MANIFEST_CACHE="S'mundi me rifreskue keshin manifest për zgjatimin: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="Ndodhën disa gabime në ruejtjen e databazës."
+INSTL_DATABASE_ERROR_CREATE="Ka ndodhë nji gabim tu'u përpjekë me krijue databazën %s.<br/>Përdoruesi mund të mos ketë privilegje me krijue databazë. Databaza e kërkueme mund të duhet me u krijue ndamazi para se ta instalosh Joomla!-n."
+INSTL_DATABASE_ERROR_DELETE="Ndodhën disa gabime tue fshi databazën"
+INSTL_DATABASE_ERROR_INITIALISE_SCHEMA="Gabim në nisjen e numrit të versionit të skemës"
+INSTL_DATABASE_FIELD_VALUE_REMOVE="Hiq"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="Ruej kopje"
+INSTL_DATABASE_FIX_TOO_LONG="Prefiksi i tabelës MySQL duhet me qenë e shumta 15 germa"
+INSTL_DATABASE_INVALID_DB_DETAILS="Hollësinat e databazës të dhana janë të pasakta dhe/ose bosh."
+INSTL_DATABASE_INVALID_MYSQL_VERSION="Të duhet MySQL 5.0.4 ose ma nalt me vazhdue instalimin. Versioni që ke asht: %s"
+INSTL_DATABASE_INVALID_TYPE="Zgjidh llojin e databazës"
+INSTL_DATABASE_NAME_TOO_LONG="Emni i databazës MySQL duhet me qenë e shumta 64 germa"
+INSTL_DATABASE_PREFIX_INVALID_CHARS="Prefiksi i tabelës MySQL duhet me fillue me shkrojë e të ndiqet nga shkroja, numra ose nënvija"
+INSTL_DATABASE_INVALID_NAME="Versionet MySQL para 5.1.6 s'duhet me përmbajtë pika ose shkroja tjera "_QQ_"speciale"_QQ_" në emën. Versioni që ke asht: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES="Emnat dhe emnat e tabelave të databazës MySQL s'duhet me fillue a me mbarue me hapsina."
+INSTL_DATABASE_NAME_INVALID_CHAR="Asnji identifikues MySQL s'duhet me përmbajtë nji NUL ASCII(0x00)."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="Dokumenti %s s'ekziston"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED="Cookies nuk duket se janë t'aktivizueme në lundruesin tand. S'ke me qenë në gjendje me instalue programin kështu. Përndryshe, mund të ketë problem me  <strong>session.save_path</strong> të serverit, nëse asht kështu këshillohu me hostuesin nëse s'din si me kontrollue apo me e ndreqë vetë."
+INSTL_HEADER_ERROR="Gabim"
+
+;Helpers
+INSTL_PAGE_TITLE="Instaluesi Joomla!"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB="S'lidhet me databazën. Lidhësi ktheu numrin: %s"
+INSTL_STD_OFFLINE_MSG="Faqja asht e mbyllun për mirmbajtje.<br /> Provo ma vonë."
+
+;Filesystem model
+INSTL_FTP_INVALIDROOT="Direktoria e përcaktueme FTP nuk asht direktoria e këtij instalimi Joomla!"
+INSTL_FTP_NOCONNECT="S'lidhet me serverin FTP"
+INSTL_FTP_NODELE="Funksioni "_QQ_"DELE"_QQ_" dështoi."
+INSTL_FTP_NODIRECTORYLISTING="S'mund të merret lista e direktorive nga serveri FTP"
+INSTL_FTP_NOLIST="Funksioni "_QQ_"LIST"_QQ_" dështoi."
+INSTL_FTP_NOLOGIN="Could not log in to the FTP server."
+INSTL_FTP_NOMKD="Funksioni "_QQ_"MKD"_QQ_" dështoi."
+INSTL_FTP_NONLST="Funksioni "_QQ_"NLST"_QQ_" dështoi."
+INSTL_FTP_NOPWD="Funksioni "_QQ_"PWD"_QQ_" dështoi."
+INSTL_FTP_NORETR="Funksioni "_QQ_"RETR"_QQ_" dështoi."
+INSTL_FTP_NORMD="Funksioni "_QQ_"RMD"_QQ_" dështoi."
+INSTL_FTP_NOROOT="S'futet në direktorinë e përcaktueme FTP"
+INSTL_FTP_NOSTOR="Funksioni "_QQ_"STOR"_QQ_" dështoi."
+INSTL_FTP_NOSYST="Funksioni "_QQ_"SYST"_QQ_" dështoi."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="Nuk u gjet vetë direktoria rranjë FTP"
+
+;others
+INSTL_ADVANCED_SETTINGS="T’dhanat e përparueme"
+INSTL_BASIC_SETTINGS="T’dhanat e thjeshta"
+INSTL_CONFPROBLEM="Dokumenti apo direktoria e konfigurimit asht e pashkrueshme, ose pati problem me e krijue dokumentin e konfigurimit. Të duhet me ngarkue kodin e maposhtëm me dorë. Shtyp te zona e tekstit me ndriçue krejt kodin dhe kopjoje e hidhe në nji dokument të ri, emnoje configuration.php dhe ngarkoje në direktorinë rranjë të faqes."
+INSTL_DATABASE_SUPPORT="Mbështetje për databazën:"
+INSTL_DISPLAY_ERRORS="Trego gabimet"
+INSTL_ERROR_DB="Ndodhën disa gabime ndërsa popullohej databaza: %s"
+INSTL_FILE_UPLOADS="Ngarkimet e dokumentave"
+INSTL_GNU_GPL_LICENSE="GNU Licenca e Përgjithshme e Publikut"
+INSTL_INSTALLATION="Instalimi"
+INSTL_JSON_SUPPORT_AVAILABLE="Mbështetje JSON"
+INSTL_LICENSE="Licenca"
+INSTL_MAGIC_QUOTES_GPC="Kuotat magjike GPC"
+INSTL_MAGIC_QUOTES_RUNTIME="Kohëzgjatja e kuotave magjike"
+INSTL_MB_LANGUAGE_IS_DEFAULT="Gjuha MB asht normalja"
+INSTL_MB_STRING_OVERLOAD_OFF="Sekuenca e mbingarkesës MB fikë"
+INSTL_NOTICEMBLANGNOTDEFAULT="Gjuha PHP mbstring nuk asht vu asnjanëse. Kjo mund të bahet lokalisht tue futë <strong>php_value mbstring.language neutral</strong> në <code>.htaccess</code>."
+INSTL_NOTICEMBSTRINGOVERLOAD="Funksioni mbingarkesë PHP mbstring u vu. Kjo mund të fiket lokalisht tue futë <strong>php_value mbstring.func_overload 0</strong> në <code>.htaccess</code>."
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />Mundesh ende me vazhdue instalimin ndërkohë që t'dhanat e konfigurimit kanë me u tregue në fund. Do të të duhet me ngarkue manualisht kodin. Shtyp në fushën e tekstit me ndriçue krejt kodin dhe mandej hidhe në nji dokument të ri teksti. Queje këte dokument 'configuration.php' dhe ngarkoje në direktorinë rranjë të faqes tande."
+INSTL_OUTPUT_BUFFERING="Buffering i outputit"
+INSTL_PARSE_INI_FILE_AVAILABLE="Mbështetje INI Parser"
+INSTL_PHP_VERSION="Versioni PHP"
+INSTL_REGISTER_GLOBALS="Regjistrimi global"
+INSTL_SAFE_MODE="Gjendja e sigurt"
+INSTL_SESSION_AUTO_START="Auto-nisje e sesionit"
+INSTL_WRITABLE="E shkrueshme"
+INSTL_XML_SUPPORT="Mbshtetje XML"
+INSTL_ZIP_SUPPORT_AVAILABLE="Mbështetje native ZIP"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Mbshtetje kompresim Zlib"
+
+;Global strings
+JADMINISTRATOR="Administrator"
+JADVANCED="E përparueme"
+JCHECK_AGAIN="Kontrollo prap"
+JERROR="Gabim"
+JGLOBAL_ISFREESOFTWARE="%s asht program i lirë lëshue nën <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU Licenca e Përgjithshme e Publikut</a>."
+JINVALID_TOKEN="Kërkesa ma e fundit u mohue sepse përmbante nji shenj të pavlefshëm sigurie. Rifreskoje faqen dhe përpiqu prap."
+JNEXT="Tjetri"
+JNO="Jo"
+JOFF="Fikë"
+JON="Ndezë"
+JPREVIOUS="I maparshmi"
+JSITE="Faqja"
+JUSERNAME="Pseudonimi"
+JYES="Po"
+
+; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="S'mund të lidhet me MySQL."
+JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="S'mundi me ngarkue drajverin e databazës: %s"
+JLIB_ENVIRONMENT_SESSION_EXPIRED="Sesioni të ka mbarue, rifreskoje faqen."
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Fushë e kërkueme: %s"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Fushë e pavlefshme: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: S'mund të lidhet me databazën <br />joomla.library: %1$s - %2$s"
+
+;Necessary for errors
+ADMIN_EMAIL="Emaili yt"
+ADMIN_PASSWORD="Fjalkalimi i administratorit"
+ADMIN_PASSWORD2="Vërteto fjalkalimin e administratorit"
+SITE_NAME="Emni i faqes"
