@@ -38,6 +38,7 @@ INSTL_DATABASE_HOST_DESC="Genelde &quot;localhost&quot;"
 INSTL_DATABASE_HOST_LABEL="Sunucu Adı"
 INSTL_DATABASE_NAME_DESC="Bazı sağlayıcılar her site için sadece belirli bir veritabanı adı kulanılmasına izin verir. Bu durumda farklı Joomla! siteleri için tablo ön eki kullanılır."
 INSTL_DATABASE_NAME_LABEL="Veritabanı Adı"
+INSTL_DATABASE_NO_SCHEMA="Bu veritabanı türü için hiçbir veritabanı şeması bulunmuyor."
 INSTL_DATABASE_OLD_PROCESS_DESC="Önceki Joomla! kurulumundan kalan yedek tablolar değiştirilecek."
 INSTL_DATABASE_OLD_PROCESS_LABEL="Eski Veritabanı İşlemi"
 INSTL_DATABASE_PASSWORD_DESC="Site güvenliği için mysql hesabınızla bir parola kullanımı gerekmektedir."
@@ -97,7 +98,9 @@ INSTL_SITE_SAMPLE_LABEL="Örnek Veri ayarı"
 INSTL_SITE_INSTALL_SAMPLE_LABEL="Örnek Veriyi Kur"
 INSTL_SITE_INSTALL_SAMPLE_DESC="Örnek veri kurulumu, yeni başlayanlar için şiddetle tavsiye edilir. Bu, Joomla! kurulum paketinde bulunan örnek içeriği kuracaktır."
 INSTL_SITE_SAMPLE_LOADED="Örnek Veri Başarıyla Kuruldu."
-INSTL_SAMPLE_DATA_SET="Varsayılan Türkçe (TR) Örnek Veri"
+INSTL_SAMPLE_DATA_SET="Varsayılan İngilizce (GB) Örnek Veri"
+INSTL_SAMPLE_BLOG_SET="Blog İngilizce (GB) Örnek Veri"
+INSTL_SAMPLE_BROCHURE_SET="Broşür İngilizce (GB) Örnek Veri"
 
 ;Tamamlama görünümü
 INSTL_COMPLETE="Bitti"
@@ -111,8 +114,8 @@ INSTL_COMPLETE_FOLDER_REMOVED="Kurulum klasörü başarıyla kaldırıldı."
 INSTL_COMPLETE_LANGUAGE_1="Joomla! kendi dilinizde mi?"
 INSTL_COMPLETE_LANGUAGE_2="Dil paketlerini indirmek için Joomla! Topluluk Sitesini ziyaret edin."
 INSTL_COMPLETE_REMOVE_FOLDER="Kurulum klasörünü kaldır"
-INSTL_COMPLETE_REMOVE_INSTALLATION="BİTİRMEDEN EVVEL UNUTMAYIN<br />KURULUM DİZİNİNİ SİLİN.<br />Kurulum dizinini silene kadar bu aşamadan ileriye gidemezsiniz. Bu, Joomla!'nın bir güvenlik özelliğidir.<br />Kurulum dizini Joomla! kurulumu yaptığınız dizindeki <code>/installation</code> dizinidir."
-INSTL_COMPLETE_TITLE="Tebrikler! Joomla! kuruldu."
+INSTL_COMPLETE_REMOVE_INSTALLATION="LÜTFEN KURULUM KLASÖRÜNÜ<br />TAMAMEN KALDIRMAYI UNURMAYINIZ.<br />Kurulum klasörü kaldırılmadığı sürece bu noktadan ileriye gitmenize izin verilmez. Bu Joomla! güvenlik özelliğidir."
+INSTL_COMPLETE_TITLE="Tebrikler! Joomla! şimdi kuruldu."
 
 ;Veritabanı Modeli
 INSTL_DATABASE_COULD_NOT_CONNECT="Veritabanına bağlanılamadı. Bağlayıcının döndürdüğü numara: %s"
